dictionary_test_output.txt

DictionaryTests.hs:43:17: error: [GHC-88464]
    Variable not in scope:
      removeDict :: Int -> Dictionary Int String -> Dictionary Int item0
   |
43 |                (removeDict keyToRemove (insertDict keyToRemove newItem emptyDict))
   |                 ^^^^^^^^^^
